# yyw

./: .gitignore  Cargo.toml  README.md  STEM_STUDIO_README.md  build.rs  run_portable.bat  run_stem_studio.bat  separators.json  setup_light.bat  stem_studio.py
.github/workflows/: rust.yml
src/: lib.rs  main.rs
