[package]
name = "yyw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yyw-cli"
path = "src/bin/cli.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rodio = "0.20"
rfd = "0.15"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.release]
opt-level = 2

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
